# bid-aggregator

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.vercel  README.md  pyproject.toml
.github/workflows/: daily-ingest.yml
docs/: gcp_deployment.md
scripts/: daily_run.sh
src/bid_aggregator/cli/: main.py  pportal_ingest.py
src/bid_aggregator/core/: __init__.py  config.py  database.py  saved_search_db.py
src/bid_aggregator/enrich/: __init__.py  deadline_extractor.py
src/bid_aggregator/ingest/: __init__.py  full_ingest.py  kkj_client.py  normalizer.py  pipeline.py  pportal_client.py
tests/: test_deadline_extractor.py  test_pportal_client.py
webapp/: __init__.py  app.py  db.py
webapp/static/css/: app.css  tokens.css
webapp/static/js/: app.js
webapp/templates/: base.html  board.html  dashboard.html  item_detail.html  items_list.html  project_detail.html  saved_searches.html
webapp/templates/partials/: icons.html  states.html
