[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bid-aggregator"
version = "0.1.0"
description = "入札・調達情報アグリゲータ - 官公需情報ポータルサイト等からの入札情報収集・検索・通知ツール"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["bid", "procurement", "government", "kkj", "aggregator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "pypdf>=5.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
notify = [
    "aiosmtplib>=3.0",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "respx>=0.21",
]
all = [
    "bid-aggregator[notify,dev]",
]

[project.scripts]
bid-cli = "bid_aggregator.cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourname/bid-aggregator"
Documentation = "https://github.com/yourname/bid-aggregator#readme"
Repository = "https://github.com/yourname/bid-aggregator"

[tool.hatch.build.targets.wheel]
packages = ["src/bid_aggregator"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/config",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["bid_aggregator"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/bid_aggregator"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
